--- a/src/usr.sbin/relayctl/relayctl.8
+++ b/src/usr.sbin/relayctl/relayctl.8
@@ -78,13 +78,10 @@ not the total number of redirected connections.
 Show detailed status of relays including the current and average
 access statistics.
 The statistics will be updated every minute.
-.It Cm show routers
-Show detailed status of routers including the configured network
-routes.
 .It Cm show sessions
 Dump the complete list of running relay sessions.
 .It Cm show summary
-Display a list of all relays, redirections, routers, tables, and hosts.
+Display a list of all relays, redirections, tables, and hosts.
 .It Cm table disable Op Ar name | id
 Disable a table.
 Consider all hosts disabled.
