Rename %%PREFIX%% to /usr/local so that this works if compiled from git. The FreeBSD port replaces /usr/local with the corresponding PREFIX.

--- a/src/usr.sbin/relayd/relayd.conf.5
+++ b/src/usr.sbin/relayd/relayd.conf.5
@@ -90,7 +90,7 @@ Additional configuration files can be included with the
 .Ic include
 keyword, for example:
 .Bd -literal -offset indent
-include "%%PREFIX%%/etc/relayd.conf.local"
+include "/usr/local/etc/relayd.conf.local"
 .Ed
 .Sh MACROS
 Macros can be defined that will later be expanded in context.
@@ -608,18 +608,18 @@ If the
 keyword is present, the relay will accept connections using the
 encrypted SSL protocol.
 The relay will attempt to look up a private key in
-.Pa %%PREFIX%%/etc/ssl/private/address:port.key
+.Pa /usr/local/etc/ssl/private/address:port.key
 and a public certificate in
-.Pa %%PREFIX%%/etc/ssl/address:port.crt ,
+.Pa /usr/local/etc/ssl/address:port.crt ,
 where
 .Ar address
 is the specified IP address and
 .Ar port
 is the specified port that the relay listens on.
 If these files are not present, the relay will continue to look in
-.Pa /etc/ssl/private/address.key
+.Pa /usr/local/etc/ssl/private/address.key
 and
-.Pa /etc/ssl/address.crt .
+.Pa /usr/local/etc/ssl/address.crt .
 See
 .Xr ssl 8
 for details about SSL server certificates.
@@ -1043,18 +1043,18 @@ This will affect the TCP window size.
 .El
 .El
 .Sh FILES
-.Bl -tag -width "%%PREFIX%%/etc/ssl/private/address.keyXX" -compact
-.It Pa %%PREFIX%%/etc/relayd.conf
+.Bl -tag -width "/usr/local/etc/ssl/private/address.keyXX" -compact
+.It Pa /usr/local/etc/relayd.conf
 .Xr relayd 8
 configuration file.
 .Pp
 .It Pa /etc/services
 Service name database.
 .Pp
-.It Pa %%PREFIX%%/etc/ssl/address.crt
-.It Pa %%PREFIX%%/etc/ssl/address:port.crt
-.It Pa %%PREFIX%%/etc/ssl/private/address.key
-.It Pa %%PREFIX%%/etc/ssl/private/address:port.key
+.It Pa /usr/local/etc/ssl/address.crt
+.It Pa /usr/local/etc/ssl/address:port.crt
+.It Pa /usr/local/etc/ssl/private/address.key
+.It Pa /usr/local/etc/ssl/private/address:port.key
 Location of the relay SSL server certificates, where
 .Ar address
 is the configured IP address
