--- a/src/usr.sbin/relayd/relayd.8
+++ b/src/usr.sbin/relayd/relayd.8
@@ -114,7 +114,7 @@ will run in the foreground and log to
 .It Fl f Ar file
 Specify an alternative configuration file.
 The default is
-.Pa %%PREFIX%%/etc/relayd.conf .
+.Pa /usr/local/etc/relayd.conf .
 .It Fl n
 Configtest mode.
 Only check the configuration file for validity.
@@ -123,7 +123,7 @@ Produce more verbose output.
 .El
 .Sh FILES
 .Bl -tag -width "/var/run/relayd.sockXX" -compact
-.It %%PREFIX%%/etc/relayd.conf
+.It /usr/local/etc/relayd.conf
 Default configuration file.
 .It /var/run/relayd.sock
 .Ux Ns -domain
