--- a/src/usr.sbin/relayd/relayd.conf.5
+++ b/src/usr.sbin/relayd/relayd.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: relayd.conf.5,v 1.128 2012/05/05 17:24:41 benno Exp $
+.\"	$OpenBSD: relayd.conf.5,v 1.131 2012/10/19 16:49:50 reyk Exp $
 .\"
 .\" Copyright (c) 2006, 2007 Reyk Floeter <reyk@openbsd.org>
 .\" Copyright (c) 2006, 2007 Pierre-Yves Ritschard <pyr@openbsd.org>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 5 2012 $
+.Dd $Mdocdate: October 19 2012 $
 .Dt RELAYD.CONF 5
 .Os
 .Sh NAME
@@ -177,8 +177,8 @@ Tables may be defined with the following attribute:
 Start the table disabled \(en no hosts will be checked in this table.
 The table can be later enabled through
 .Xr relayctl 8 .
-.Pp
 .El
+.Pp
 Each table must contain at least one host
 .Ar address ;
 multiple hosts are separated by newline, comma, or whitespace.
@@ -385,7 +385,7 @@ host from the specified table:
 .Bl -tag -width Ds
 .It Ic mode hash
 Balances the outgoing connections across the active hosts based on the
-hashed name of the relay, the hashed name of the table and the IP
+hashed name of the relay, the hashed name of the table, and the IP
 address and port of the relay.
 Additional input can be fed into the
 hash by looking at HTTP headers and GET variables;
@@ -393,16 +393,30 @@ see the
 .Sx PROTOCOLS
 section below.
 This mode is only supported by relays.
+.It Ic mode least-states
+Forward each outgoing connection to the active host with the least
+active
+.Xr pf 4
+states.
+This mode is only supported by redirections.
 .It Ic mode loadbalance
 Balances the outgoing connections across the active hosts based on the
-hashed name of the relay, the hashed name of the table, the IP
-address and port of the relay and the IP address of the client.
+hashed name of the relay, the hashed name of the table, the source IP
+address of the client, and the IP address and port of the relay.
+This mode is only supported by relays.
+.It Ic mode random
+Distributes the outgoing connections randomly through all active hosts.
 This mode is only supported by relays.
 .It Ic mode roundrobin
 Distributes the outgoing connections using a round-robin scheduler
 through all active hosts.
 This is the default mode and will be used if no option has been specified.
 This mode is supported by redirections and relays.
+.It Ic mode source-hash
+Balances the outgoing connections across the active hosts based on the
+hashed name of the redirection or relay, the hashed name of the table,
+and the source IP address of the client.
+This mode is only supported by relays.
 .El
 .Sh REDIRECTIONS
 Redirections represent a
@@ -596,8 +610,9 @@ Like the previous directive, but connect to a host from the specified
 table; see the
 .Sx TABLES
 section above for information about table options.
-This directive can be specified twice \(en the second entry will be used
-as the backup table if all hosts in the main table are down.
+This directive can be specified multiple times \(en subsequent entries
+will be used as the backup table if all hosts in the previous table
+are down.
 At least one entry for the main table is mandatory.
 .It Xo
 .Ic forward to
@@ -1054,7 +1069,7 @@ This option for the underlying IP connection may be used to discard packets
 with a TTL lower than the specified value.
 This can be used to implement the
 .Ar Generalized TTL Security Mechanism (GTSM)
-according to RFC 3682.
+according to RFC 5082.
 .It Ic ip ttl Ar number
 Change the default time-to-live value in the IP headers.
 .It Xo
